--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.56.2",
     "@types/uuid": "^10.0.0",
+    "caniuse-lite": "^1.0.30001731",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
